2005-07-28  Joseph S. Myers  <joseph@codesourcery.com>

	PR c/21873
	* c-typeck.c (push_init_level): Don't pop levels without braces if
	implicit == 1.

2005-07-28  Gerald Pfeifer  <gerald@pfeifer.com>
  
  	* doc/install.texi (Configuration): Update Valgrind homepage.
 
2005-07-28  Richard Sandiford  <richard@codesourcery.com>

	PR c/20187
	* fold-const.c (fold): When shortening comparisons of widened operands,
	check whether the tree returned by get_unwidened really is wider.

2005-07-28  Richard Sandiford  <richard@codesourcery.com>

	PR c/22589
	Backport from mainline:

	2004-06-16  Alexandre Oliva  <aoliva@redhat.com>
	* tree.c (get_narrower): Don't narrow integral types into
	non-integral types.

2005-07-26  Bernardo Innocenti  <bernie@develer.com>

	Backport from mainline:
	2005-07-12  Peter Barada  <peter@the-baradas.com>
	PR middle-end/16719
	PR middle-end/18421
	* config/m68k/m68k.h (HARD_REGNO_MODE_OK): Disallow bytes
	in address registers.
	* config/m68k/m68k.c (hard_regno_mode_ok): Likewise.
	* config/m68k/m68k.md: Replace 's' with 'i' in 4th
	alternative of addsi3_5200.

2005-07-21  Janis Johnson  <janis187@us.ibm.com>

	PR target/20191
	Backport from mainline:

	2004-04-23  Dale Johannesen  <dalej@apple.com>

	* config/rs6000.md (movsf_hardfloat): Add POWER form of nop.
	(movdf_hardfloat64):  Ditto.
	(movdf_softfloat64):  Ditto.

	* config/rs6000.md (movsf_hardfloat): Accept CTR-to-CTR copy.
	(movdf_hardfloat64):  Ditto.

2005-07-21  Richard Sandiford  <richard@codesourcery.com>

	PR rtl-optimization/22167
	* gcse.c (hoist_code): Fix hoist_exprs[] check.

2005-07-19  Gerald Pfeifer  <gerald@pfeifer.com>

	* config.gcc: Add support for *-*-freebsd7, *-*-freebsd8,
	and *-*-freebsd9.
	* config/freebsd-spec.h (FBSD_TARGET_OS_CPP_BUILTINS): Ditto.
	
2005-07-09  Jakub Jelinek  <jakub@redhat.com>

	* config/i386/i386.c (output_set_got): Don't omit OFFSET FLAT:
	in Intel syntax add %reg, OFFSET FLAT:_GLOBAL_OFFSET_TABLE_+(.-.Lx).
